k8s/kustomize/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: copr-backend
  template:
    metadata:
      labels:
        component: copr-backend
    spec:
      nodeSelector:
        usage: test
        os.architecture: amd64
      containers:
        - image: pkking/copr_backend_httpd@sha256:74069eed66b0a721148f7e5a6910c3b23ed5a04e20a04e8770bced59b08c11ab
          imagePullPolicy: IfNotPresent
          name: httpd
          livenessProbe:
            tcpSocket:
              port: 5002
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 5002
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 5002
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/copr/public_html/results
              name: copr-backend-data
        - image: pkking/copr_backend@sha256:6916528292526767037333c62e919b71628d7da2b48f0c5cc155777f145adaa0
          imagePullPolicy: IfNotPresent
          name: log
          args: ["/usr/bin/copr_run_logger.py"]
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/copr-be.conf
              name: copr-secrets
              subPath: backend_copr-be.conf
            - mountPath: /var/lib/copr/public_html/results
              name: copr-backend-data
            - mountPath: /etc/copr/copr-be.conf
              name: copr-secrets
              subPath: backend_copr-be.conf
        - image: pkking/copr_backend@sha256:6916528292526767037333c62e919b71628d7da2b48f0c5cc155777f145adaa0
          imagePullPolicy: IfNotPresent
          name: action
          args: ["/run-backend", "--sign-host", "copr-keygen", "/usr/bin/copr-run-dispatcher", "actions"]
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /etc/copr/copr-be.conf
              name: copr-secrets
              subPath: backend_copr-be.conf
            - mountPath: /var/lib/copr/public_html/results
              name: copr-backend-data
        - image: pkking/copr_backend@sha256:6916528292526767037333c62e919b71628d7da2b48f0c5cc155777f145adaa0
          imagePullPolicy: IfNotPresent
          name: build
          args: ["/run-backend", "--sign-host", "copr-keygen", "/usr/bin/copr-run-dispatcher", "builds"]
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /home/copr/.ssh/builder_config
              name: copr-backend
              subPath: builder_config
            - mountPath: /home/copr/.ssh/id_rsa
              name: copr-secrets
              subPath: backend_id_rsa
            - mountPath: /home/copr/.ssh/id_rsa.pub
              name: copr-secrets
              subPath: backend_id_rsa.pub
            - mountPath: /var/lib/copr/public_html/results
              name: copr-backend-data
            - mountPath: /etc/copr/copr-be.conf
              name: copr-secrets
              subPath: backend_copr-be.conf
      volumes:
        - name: copr-backend
          configMap:
            name: copr-backend
        - name: copr-backend-data
          persistentVolumeClaim:
            claimName: copr-backend-data
        - name: copr-secrets
          secret:
            secretName: copr-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: copr-backend
spec:
  ports:
    - name: httpd
      port: 5002
      protocol: TCP
      targetPort: 5002
  selector:
    component: copr-backend
  type: ClusterIP
---
