k8s/kustomize/build-sf.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fedora-copr
  name: builder
  labels:
    component: copr-builder-sf
spec:
  ports:
  - port: 22
    name: builder
  clusterIP: None
  selector:
    component: copr-builder-sf
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: copr-builder-sf
  namespace: fedora-copr
spec:
  selector:
    matchLabels:
      component: copr-builder-sf # has to match .spec.template.metadata.labels
  serviceName: "builder"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        component: copr-builder-sf # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: copr-builder-sf
        image: pkking/copr_builder:main
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        livenessProbe:
          tcpSocket:
            port: 22
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 22
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
        ports:
          - containerPort: 22
            protocol: TCP
        volumeMounts:
          - mountPath: /etc/copr-distgit-client/docker.ini
            name: copr-builder
            subPath: client.ini
          - mountPath: /etc/copr-rpmbuild/main.ini
            name: copr-builder
            subPath: rpmbuild.ini
          - mountPath: /root/.ssh/id_backend_pub
            name: copr-builder
            subPath: id_backend_pub
      volumes:
        - name: copr-builder
          configMap:
            name: copr-builder
