k8s/kustomize/builder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      component: copr-builder
  template:
    metadata:
      labels:
        component: copr-builder
    spec:
      containers:
        - image: pkking/copr_builder@sha256:70f2da827280ff2f55f92f90bf64d706c01c65ab22395f645634c9073ad8ada2
          imagePullPolicy: IfNotPresent
          name: builder
          securityContext:
            privileged: true
          livenessProbe:
            tcpSocket:
              port: 22
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 22
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 768Mi
          ports:
            - containerPort: 22
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: copr-builder
spec:
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
  selector:
    component: copr-builder
  type: ClusterIP
