k8s/kustomize/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-database
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      component: copr-database
  template:
    metadata:
      labels:
        component: copr-database
    spec:
      containers:
        - image: pkking/copr_database:main
          imagePullPolicy: IfNotPresent
          name: copr-postgres
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - --live
            initialDelaySeconds: 120
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresql-data
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: copr-database-data
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    component: copr-database
  type: ClusterIP
