k8s/kustomize/distgit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-distgit
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: copr-distgit
  template:
    metadata:
      labels:
        component: copr-distgit
    spec:
      nodeSelector:
        usage: test
        os.architecture: amd64
      containers:
        - image: pkking/copr_distgit@sha256:693c6ec64af3e5ded298cc9eb26a432ca4960a6463058b76e03ec7f946947364
          imagePullPolicy: IfNotPresent
          name: copr-distgit-httpd
          livenessProbe:
            tcpSocket:
              port: 5001
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 5001
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 5001
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/dist-git
              name: copr-distgit-data
            - mountPath: /var/lib/copr-dist-git
              name: logs
            - mountPath: /var/log/copr-dist-git
              name: logs
            - mountPath: /var/log/httpd
              name: logs
          command: ["/usr/sbin/httpd", "-DFOREGROUND"]
        - image: pkking/copr_distgit@sha256:693c6ec64af3e5ded298cc9eb26a432ca4960a6463058b76e03ec7f946947364
          imagePullPolicy: IfNotPresent
          name: copr-distgit
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /var/lib/dist-git
              name: copr-distgit-data
            - mountPath: /etc/copr/copr-dist-git.conf
              name: copr-secrets
              subPath: distgit_copr-dist-git.conf
            - name: logs
              mountPath: /var/lib/copr-dist-git
            - name: logs
              mountPath: /var/log/copr-dist-git
            - name: logs
              mountPath: /var/log/httpd
            - name: locks
              mountPath: /var/lock/copr-dist-git
      volumes:
        - name: copr-distgit-data
          persistentVolumeClaim:
            claimName: copr-distgit-data
        - name: copr-distgit
          configMap:
            name: copr-distgit
        - name: logs
          persistentVolumeClaim:
            claimName: copr-distgit-logs
        - name: locks
          persistentVolumeClaim:
            claimName: copr-distgit-locks
        - name: copr-secrets
          secret:
            secretName: copr-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: copr-distgit
spec:
  ports:
    - name: httpd
      port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    component: copr-distgit
  type: ClusterIP
