k8s/kustomize/keygen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-keygen
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: copr-keygen
  template:
    metadata:
      labels:
        component: copr-keygen
    spec:
      containers:
        - image: ghcr.io/pkking/copr_keygen-signd@sha256:2ff6e1fb80fe39bda59b743f619e586b679fff3729e8dc06496f78934a67181a
          imagePullPolicy: IfNotPresent
          command: ["/signd-entrypoint", "0.0.0.0/0"]
          name: copr-keygen-signer
          livenessProbe:
            tcpSocket:
              port: 5167
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 5167
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 5167
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/copr-keygen
              name: copr-keygen-data
        - image: ghcr.io/pkking/copr_keygen-signd@sha256:2ff6e1fb80fe39bda59b743f619e586b679fff3729e8dc06496f78934a67181a
          imagePullPolicy: IfNotPresent
          command: ["/usr/sbin/httpd", "-DFOREGROUND"]
          name: copr-keygen-httpd
          livenessProbe:
            tcpSocket:
              port: 5003
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 5003
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 5003
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/copr-keygen
              name: copr-keygen-data
            - mountPath: /etc/httpd/conf.d/copr-keygen.conf
              name: copr-keygen
              subPath: copr-keygen.conf
      volumes:
        - name: copr-keygen-data
          persistentVolumeClaim:
            claimName: copr-keygen-data
        - name: copr-keygen
          configMap:
            name: copr-keygen

---
apiVersion: v1
kind: Service
metadata:
  name: copr-keygen
spec:
  ports:
    - name: httpd
      port: 5003
      protocol: TCP
      targetPort: 5003
    - name: signer
      port: 5167
      protocol: TCP
      targetPort: 5167
  selector:
    component: copr-keygen
  type: ClusterIP
