k8s/kustomize/resalloc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-resalloc
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      component: copr-resalloc
  template:
    metadata:
      labels:
        component: copr-resalloc
    spec:
      nodeSelector:
        usage: test
        os.architecture: amd64
      serviceAccountName: resalloc
      containers:
        - image: pkking/copr_resalloc@sha256:6f94b2ffa1c0d8daa24ccae6fe9eccf873922b557fd53c63d7d1c9d015bf5f94
          imagePullPolicy: IfNotPresent
          name: resalloc
          livenessProbe:
            tcpSocket:
              port: 49100
            initialDelaySeconds: 120
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 49100
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 49100
              protocol: TCP
          command:
            - /bin/sh
            - -c
            - |
              chmod +x /home/resalloc/provision/local-delete;
              install -m 400 /root/.ssh/id_rsa-ro /root/.ssh/id_rsa;
              install -m 755 /home/resalloc/provision/local-new-x86-ro /home/resalloc/provision/local-new-x86;
              install -m 755 /home/resalloc/provision/local-new-aarch64-ro /home/resalloc/provision/local-new-aarch64;
              ln -sf /dev/stdout /var/log/resallocserver/main.log;
              exec /usr/bin/resalloc-server;
          volumeMounts:
            - mountPath: /etc/resallocserver/pools.yaml
              name: copr-resalloc
              subPath: pools.yaml
            - mountPath: /home/resalloc/provision/local-new-x86-ro
              name: copr-resalloc
              subPath: local-new-x86
            - mountPath: /home/resalloc/provision/local-new-aarch64-ro
              name: copr-resalloc
              subPath: local-new-aarch64
            - mountPath: /etc/resallocserver/server.yaml
              name: copr-secrets
              subPath: resalloc_server.yaml
            - mountPath: /root/.ssh/builder_config
              name: copr-resalloc
              subPath: builder_config
            - mountPath: /root/.ssh/id_rsa-ro
              name: copr-secrets
              subPath: backend_id_rsa
            - name: resalloc-data
              mountPath: /var/lib/resallocserver
            - name: resalloc-data
              mountPath: /var/log/resallocserver
      volumes:
        - name: copr-resalloc
          configMap:
            name: copr-resalloc
        - name: resalloc-data
          persistentVolumeClaim:
            claimName: resalloc-data
        - name: copr-secrets
          secret:
            secretName: copr-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: copr-resalloc
spec:
  ports:
    - name: resalloc
      port: 49100
      protocol: TCP
      targetPort: 49100
  selector:
    component: copr-resalloc
  type: ClusterIP
